--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,11 +19,12 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Setup Android SDK
+      - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
+      # 🔧 Using system Gradle since your repo has no gradlew file
       - name: Build Debug APK
-        run: ./gradlew assembleDebug
+        run: gradle assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
